--- a/Rename_GoPro_Files/Rename_GoPro_Files_.NETFramework/Rename_GoPro_Files_.NETFramework.csproj
+++ b/Rename_GoPro_Files/Rename_GoPro_Files_.NETFramework/Rename_GoPro_Files_.NETFramework.csproj
@@ -15,14 +15,15 @@
     <PublishUrl>C:\Users\Admin\Documents\GitHub\Rename_GoPro_Files\Installer\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <UpdateUrl>http://localhost/Rename_GoPro_Files_.NETFramework/</UpdateUrl>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
